Bugfix/remove errors object from callback (#48)
* Update controller and remove `errors` object, since there is no validation.

* Add redirect URL for the callback controller.
Enhance state of the onboard process to hold the redirect url.
Extend controller methods.

* Update documentation
