# agrirouter-middleware-api/src/main/java/de/agrirouter/middleware/api/events/UpdateRecipientsForEndpointEvent.java
@@ -11,7 +11,7 @@ import org.springframework.context.ApplicationEvent;
 public class UpdateRecipientsForEndpointEvent extends ApplicationEvent {
 
     /**
-     * The agrirouter ID of the endpoint.
+     * The agrirouter© ID of the endpoint.
      */
     private final String agrirouterEndpointId;
 
