# agrirouter-middleware-controller/src/main/java/de/agrirouter/middleware/controller/dto/response/ApplicationWithEndpointStatusDto.java
@@ -35,9 +35,9 @@ public class ApplicationWithEndpointStatusDto {
     private String name;
 
     /**
-     * The agrirouter ID of the application.
+     * The agrirouter© ID of the application.
      */
-    @Schema(description = "The agrirouter ID of the application.")
+    @Schema(description = "The agrirouter© ID of the application.")
     private String applicationId;
 
     /**
