# agrirouter-middleware-persistence/src/main/java/de/agrirouter/middleware/persistence/TimeLogRepository.java
@@ -12,7 +12,7 @@ import java.util.Set;
 public interface TimeLogRepository extends MongoRepository<TimeLog, String> {
 
     /**
-     * Delete all time logs by agrirouter ID.
+     * Delete all time logs by agrirouter© ID.
      *
      * @param agrirouterEndpointId -
      */
